--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -23,11 +23,11 @@ jobs:
 
     steps:
       - name: Install dependencies
-        run: sudo apt-get install -yqq --no-install-recommends build-essential python3 python3-toml
+        run: sudo apt-get install -yqq --no-install-recommends build-essential libgtk-3-dev python3 python3-toml
       - uses: actions/checkout@v1
       - uses: actions-rs/toolchain@v1
         with:
-          toolchain: nightly-2023-10-15
+          toolchain: nightly-2023-08-01
           override: true
       - uses: actions-rs/cargo@v1
         with:
