p2p v2 don't punish peers for duplicate tx announcements and unsolicited tx responses; purge unanswered tx requests after some time; Also, BlockSyncManager observer was added for testing purposes.

--- a/p2p/Cargo.toml
+++ b/p2p/Cargo.toml
@@ -25,6 +25,7 @@ utils = { path = "../utils/" }
 async-trait.workspace = true
 bytes.workspace = true
 enum-iterator.workspace = true
+dyn-clone.workspace = true
 futures.workspace = true
 hex.workspace = true
 itertools.workspace = true
