--- a/api-server/scanner-lib/Cargo.toml
+++ b/api-server/scanner-lib/Cargo.toml
@@ -15,6 +15,8 @@ logging = { path = "../../logging" }
 node-comm = { path = "../../wallet/wallet-node-client" }
 pos_accounting = { path = "../../pos_accounting" }
 utils = { path = "../../utils" }
+tx-verifier = { path = "../../chainstate/tx-verifier" }
+constraints-value-accumulator = { path = "../../chainstate/constraints-value-accumulator" }
 
 async-trait.workspace = true
 thiserror.workspace = true
