Add storage tests

--- a/api-server/storage-test-suite/Cargo.toml
+++ b/api-server/storage-test-suite/Cargo.toml
@@ -13,6 +13,7 @@ crypto = { path = '../../crypto/' }
 logging = { path = "../../logging" }
 test-utils = {path = '../../test-utils'}
 utils = { path = "../../utils" }
+pos_accounting = {path = '../../pos_accounting'}
 
 async-trait.workspace = true
 chrono.workspace = true
