Tests in p2p/src/tests/mod.rs now include the name and address of "test nodes" in the tracing span; spurious failures of new_full_relay_connections_on_stale_tip were fixed (hopefully) by using very large timing values in P2pConfig; saturating_duration_sub is used in validate_peer_time to allow artificially large max_clock_diff.

--- a/p2p/p2p-test-utils/Cargo.toml
+++ b/p2p/p2p-test-utils/Cargo.toml
@@ -18,3 +18,4 @@ utils = { path = "../../utils" }
 
 portpicker.workspace = true
 tokio = { workspace = true, default-features = false, features = ["io-util", "macros", "net", "rt", "sync"] }
+tracing.workspace = true
