Rename test_timeout to run_with_timeout; only enable test cancellation on panic if certain env vars are set.

--- a/p2p/p2p-test-utils/Cargo.toml
+++ b/p2p/p2p-test-utils/Cargo.toml
@@ -11,6 +11,7 @@ chainstate-storage = { path = "../../chainstate/storage" }
 chainstate-test-framework = { path = "../../chainstate/test-framework" }
 common = { path = "../../common/" }
 crypto = { path = "../../crypto/" }
+logging = { path = "../../logging/" }
 mempool = { path = "../../mempool/" }
 subsystem = { path = "../../subsystem/" }
 test-utils = { path = "../../test-utils" }
