--- a/build-tools/linux-systemd-service/mintlayer-core-testnet.service
+++ b/build-tools/linux-systemd-service/mintlayer-core-testnet.service
@@ -6,13 +6,13 @@ After=syslog.target network-online.target
 #  1. DO NOT use root
 #  2. DO NOT use a user that has root access through sudo, doas, or similar
 [Service]
-User=YOUR_USERNAME_HERE
+User=mintlayeruser
 
 # Type is simple because the node-daemon is blocking
 Type=simple
 
 # Path of the source code OR executable
-WorkingDirectory=/home/bobby/mintlayer-core
+WorkingDirectory=/home/mintlayeruser/mintlayer-core
 
 # Use this if you want the node to be built from source
 ExecStart=cargo run -j 1 --release --bin node-daemon -- testnet
