--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -25,13 +25,11 @@ jobs:
       - name: Install dependencies
         run: sudo apt-get install -yqq --no-install-recommends build-essential libgtk-3-dev python3 python3-toml
       - uses: actions/checkout@v1
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: nightly-2023-08-01
-          override: true
-      - uses: actions-rs/cargo@v1
-        with:
-          command: clean
+      - name: Install rust
+        run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain nightly-2023-08-01
+      - name: Run cargo clean
+        run: cargo clean
+
       - name: Run coverage tests
         run: python3 build-tools/workspace-partition.py ${{ env.PARTITIONS_COUNT }} ${{ matrix.partition }} -p | xargs cargo test
         env:
