--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -23,26 +23,20 @@ jobs:
 
     steps:
       - name: Install dependencies
-        run: sudo apt-get install -yqq --no-install-recommends build-essential libgtk-3-dev python3 python3-toml
+        run: sudo apt-get install -yqq --no-install-recommends build-essential libgtk-3-dev python3 python3-toml grcov
       - uses: actions/checkout@v1
       - name: Install rust
-        run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain nightly-2023-08-01
+        run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain nightly-2023-11-01
       - name: Run cargo clean
         run: cargo clean
 
       - name: Run coverage tests
-        run: python3 build-tools/workspace-partition.py ${{ env.PARTITIONS_COUNT }} ${{ matrix.partition }} -p | xargs cargo test
-        env:
-          RUST_LOG: debug
-          RUST_BACKTRACE: full
-          CARGO_INCREMENTAL: 0
-          RUSTFLAGS: "-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off"
-          RUSTDOCFLAGS: "-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off"
-      - id: coverage
-        uses: actions-rs/grcov@v0.1
-        with:
-          config: build-tools/coverage/grcov.yml
+        run: python3 build-tools/workspace-partition.py ${{ env.PARTITIONS_COUNT }} ${{ matrix.partition }} | xargs -I {} sh -c 'CARGO_INCREMENTAL=0 RUST_BACKTRACE=full RUST_LOG=debug RUSTFLAGS="-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off" RUSTDOCFLAGS="-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off" RUSTUP_TOOLCHAIN=nightly-2023-11-01 cargo test'
+
+      - name: Collect coverage data with grcov
+        run: grcov . --output-type lcov --binary-path target/debug/ -o grcov-report-${{ matrix.partition }}
+
       - uses: actions/upload-artifact@v2
         with:
           name: code-coverage-report-${{ matrix.partition }}
-          path: ${{ steps.coverage.outputs.report }}
+          path: grcov-report-${{ matrix.partition }}
