--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -14,7 +14,7 @@ env:
 
 jobs:
   coverage:
-    runs-on: debian-12
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
@@ -23,12 +23,14 @@ jobs:
 
     steps:
       - name: Install dependencies
-        run: sudo apt-get install -yqq build-essential libgtk-3-dev python3 python3-toml grcov
+        run: sudo apt-get install -yqq build-essential libgtk-3-dev python3 python3-toml
       - uses: actions/checkout@v1
       - name: Install rust
         run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain nightly-2023-11-01
       - name: Run cargo clean
         run: cargo clean
+      - name: Install grcov from cargo
+        run: cargo install grcov
 
       - name: Run coverage tests
         run: python3 build-tools/workspace-partition.py ${{ env.PARTITIONS_COUNT }} ${{ matrix.partition }} | xargs -I {} sh -c 'CARGO_INCREMENTAL=0 RUST_BACKTRACE=full RUST_LOG=debug RUSTFLAGS="-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off" RUSTDOCFLAGS="-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off" RUSTUP_TOOLCHAIN=nightly-2023-11-01 cargo test'
