Remove tokio and tower-http unnecessary features

--- a/api-server/web-server/Cargo.toml
+++ b/api-server/web-server/Cargo.toml
@@ -21,5 +21,5 @@ hyper.workspace = true
 serde = { workspace = true, features = ["derive"] }
 serde_json.workspace = true
 thiserror.workspace = true
-tokio = { workspace = true, features = ["full"] }
-tower-http = { workspace = true, features = ["full"] }
+tokio = { workspace = true }
+tower-http = { workspace = true, features = ["cors"] }
