--- a/wallet/wallet-node-client/Cargo.toml
+++ b/wallet/wallet-node-client/Cargo.toml
@@ -23,10 +23,11 @@ subsystem = { path = "../../subsystem" }
 
 async-trait.workspace = true
 base64.workspace = true
-jsonrpsee.workspace = true
 serde_json.workspace = true
 thiserror.workspace = true
 tower.workspace = true
+
+jsonrpsee = { workspace = true, default-features = false }
 
 [dev-dependencies]
 chainstate-storage = { path = "../../chainstate/storage" }
