Create crate for accumulator

--- a/chainstate/Cargo.toml
+++ b/chainstate/Cargo.toml
@@ -10,6 +10,7 @@ chainstate-storage = {path = './storage', features = ["mock"]}
 chainstate-types = {path = './types'}
 common = {path = '../common'}
 consensus = {path = "../consensus"}
+constraints-value-accumulator = {path = './constraints-value-accumulator'}
 crypto = {path = '../crypto'}
 logging = {path = '../logging'}
 pos_accounting = {path = '../pos_accounting'}
