--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,10 @@ jobs:
         run: cargo test --release --doc
       # This test is ignored, so it needs to run separately.
       - name: Run mixed_sighash_types test
-        run: cargo test --release -p common mixed_sighash_types -- --ignored
+        run: cargo test --release mixed_sighash_types
+      # This test is ignored, so it needs to run separately.
+      - name: Run test_4opc_sequences test
+        run: cargo test --release test_4opc_sequences -- --ignored
       - name: Run functional tests
         run: cargo test --release -p mintlayer-test --test functional -- --ignored
       - uses: actions/upload-artifact@v2
@@ -68,6 +71,9 @@ jobs:
       # This test is ignored, so it needs to run separately.
       - name: Run mixed_sighash_types test
         run: cargo test --release mixed_sighash_types
+      # This test is ignored, so it needs to run separately.
+      - name: Run test_4opc_sequences test
+        run: cargo test --release test_4opc_sequences
       - name: Run functional tests
         run: cargo test --release -p mintlayer-test --test functional -- --ignored
       - uses: actions/upload-artifact@v2
@@ -96,6 +102,9 @@ jobs:
       # This test is ignored, so it needs to run separately.
       - name: Run mixed_sighash_types test
         run: cargo test --release mixed_sighash_types
+      # This test is ignored, so it needs to run separately.
+      - name: Run test_4opc_sequences test
+        run: cargo test --release test_4opc_sequences
       - name: Run functional tests
         run: cargo test --release -p mintlayer-test --test functional -- --ignored
       - uses: actions/upload-artifact@v2
