--- a/api-server/scanner-lib/Cargo.toml
+++ b/api-server/scanner-lib/Cargo.toml
@@ -26,5 +26,6 @@ tokio = { workspace = true, features = ["full"] }
 chainstate-test-framework = { path = "../../chainstate/test-framework" }
 crypto = { path = "../../crypto" }
 test-utils = { path = "../../test-utils" }
+serialization = { path = "../../serialization" }
 
 rstest.workspace = true
