--- a/api-server/storage-test-suite/Cargo.toml
+++ b/api-server/storage-test-suite/Cargo.toml
@@ -14,6 +14,7 @@ logging = { path = "../../logging" }
 test-utils = {path = '../../test-utils'}
 utils = { path = "../../utils" }
 pos_accounting = {path = '../../pos_accounting'}
+serialization = { path = "../../serialization" }
 
 async-trait.workspace = true
 chrono.workspace = true
