--- a/mempool/Cargo.toml
+++ b/mempool/Cargo.toml
@@ -33,6 +33,7 @@ serde.workspace = true
 static_assertions.workspace = true
 thiserror.workspace = true
 tokio = { workspace = true, default-features = false, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
+num-traits.workspace = true
 
 [dev-dependencies]
 chainstate-storage = { path = '../chainstate/storage' }
