--- a/rpc/Cargo.toml
+++ b/rpc/Cargo.toml
@@ -18,7 +18,9 @@ async-trait.workspace = true
 base64.workspace = true
 http.workspace = true
 hyper.workspace = true
-jsonrpsee = { workspace = true, features = ["server", "server-core", "http-client", "macros"] }
+jsonrpsee = { workspace = true, features = ["server", "server-core", "http-client", "ws-client", "macros"] }
+serde.workspace = true
+serde_json.workspace = true
 thiserror.workspace = true
 tower = { workspace = true, features = ["util"] }
 tower-http = { workspace = true, features = ["auth", "set-header"] }
