--- a/wallet/wallet-rpc-lib/Cargo.toml
+++ b/wallet/wallet-rpc-lib/Cargo.toml
@@ -20,6 +20,7 @@ utils = { path = "../../utils" }
 wallet = { path = ".." }
 wallet-controller = { path = "../wallet-controller" }
 wallet-types = { path = "../types" }
+p2p-types = { path = "../../p2p/types" }
 
 anyhow.workspace = true
 async-trait.workspace = true
