p2p: prevent connection cycles

--- a/p2p/Cargo.toml
+++ b/p2p/Cargo.toml
@@ -62,6 +62,7 @@ tokio = { workspace = true, default-features = false, features = ["io-util", "ma
 
 criterion.workspace = true
 ctor.workspace = true
+num.workspace = true
 portpicker.workspace = true
 rstest.workspace = true
 
