Discouraged peers are now disconnected automatically; Peers are no longer automatically banned; Ban duration is now always specified explicitly by the user; Time formatting improvements; Wallet & rpc commands for printing reserved and discouraged addresses were added; Printing banned and discouraged addresses now also prints the expiration time;

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -139,6 +139,7 @@ criterion = "0.5"
 crossterm = "0.27"
 derive_more = "0.99"
 directories = "5.0"
+humantime = "2.1"
 dyn-clone = "1.0"
 enum-iterator = "1.4"
 expect-test = "1.3"
