--- a/api-server/api-server-common/Cargo.toml
+++ b/api-server/api-server-common/Cargo.toml
@@ -11,7 +11,7 @@ license.workspace = true
 common = { path = '../../common' }
 crypto = { path = '../../crypto/' }
 logging = { path = '../../logging'}
-pos_accounting = { path = '../../pos_accounting' }
+pos-accounting = { path = '../../pos-accounting' }
 serialization = { path = "../../serialization" }
 mempool = { path = "../../mempool" }
 
