--- a/chainstate/storage/Cargo.toml
+++ b/chainstate/storage/Cargo.toml
@@ -10,7 +10,7 @@ rust-version.workspace = true
 [dependencies]
 chainstate-types = { path = '../types' }
 common = { path = '../../common' }
-pos_accounting = {path = '../../pos_accounting'}
+pos-accounting = {path = '../../pos-accounting'}
 serialization = { path = "../../serialization" }
 storage = { path = '../../storage', features = ['inmemory'] }
 tokens-accounting = {path = '../../tokens-accounting'}
