--- a/chainstate/tx-verifier/Cargo.toml
+++ b/chainstate/tx-verifier/Cargo.toml
@@ -14,7 +14,7 @@ common = {path = '../../common'}
 consensus = {path = '../../consensus'}
 constraints-value-accumulator = {path = '../constraints-value-accumulator'}
 crypto = {path = '../../crypto'}
-pos_accounting = {path = '../../pos_accounting'}
+pos-accounting = {path = '../../pos-accounting'}
 serialization = { path = "../../serialization" }
 tokens-accounting = {path = '../../tokens-accounting'}
 utils = {path = '../../utils'}
