--- a/node-gui/Cargo.toml
+++ b/node-gui/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "node-gui"
+description = "Mintlayer Node GUI"
 license.workspace = true
 version.workspace = true
 edition.workspace = true
 rust-version.workspace = true
+authors = ["Samer Afach <samer.afach@mintlayer.org>", "Ben Marsh <benjamin.marsh@mintlayer.org>", "Enrico Rubboli <enrico.rubboli@mintlayer.org>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
