--- a/wallet/wallet-rpc-daemon/Cargo.toml
+++ b/wallet/wallet-rpc-daemon/Cargo.toml
@@ -4,6 +4,7 @@ license.workspace = true
 edition.workspace = true
 version.workspace = true
 rust-version.workspace = true
+authors = ["Samer Afach <samer.afach@mintlayer.org>", "Ben Marsh <benjamin.marsh@mintlayer.org>", "Enrico Rubboli <enrico.rubboli@mintlayer.org>"]
 
 [dependencies]
 
