--- a/Cargo.toml
+++ b/Cargo.toml
@@ -257,5 +257,4 @@ opt-level = 2
 # The profile that 'cargo dist' will build with
 [profile.dist]
 inherits = "release"
-lto = "thin"
-
+lto = "off"
