--- a/rpc/Cargo.toml
+++ b/rpc/Cargo.toml
@@ -5,13 +5,15 @@ version.workspace = true
 edition.workspace = true
 rust-version.workspace = true
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+test-support = []
 
 [dependencies]
 crypto = { path = "../crypto/" }
 logging = { path = "../logging" }
 subsystem = { path = "../subsystem" }
 utils = { path = "../utils/" }
+utils-tokio = { path = "../utils/tokio" }
 
 anyhow.workspace = true
 async-trait.workspace = true
