--- a/build-tools/p2p-test/docker-compose-base.yml
+++ b/build-tools/p2p-test/docker-compose-base.yml
@@ -5,7 +5,7 @@ services:
       dockerfile: build-tools/p2p-test/Dockerfile
     command: bash -c "
         node-daemon testnet \
-            --http-rpc-addr 0.0.0.0:$RPC_PORT \
+            --rpc-bind-address 0.0.0.0:$RPC_PORT \
             $(dig +short $NODES_LIST | xargs printf '--p2p-boot-node %s ') \
             --p2p-force-dns-query-if-no-global-addresses-known true \
       "
