--- a/Cargo.toml
+++ b/Cargo.toml
@@ -118,6 +118,7 @@ version = "0.3.0"
 license = "MIT"
 
 [workspace.dependencies]
+addr = "0.15"
 anyhow = "1.0"
 arraytools = "0.1"
 assert_cmd = "2"
@@ -133,7 +134,7 @@ bytes = "1.1"
 cfg-if = "1.0"
 chacha20poly1305 = "0.10"
 chrono = "0.4"
-clap = "4"
+clap = { version = "4", features = ["derive", "env"] }
 ctor = "0.2"
 criterion = "0.5"
 crossterm = "0.27"
@@ -190,6 +191,7 @@ schnorrkel = "0.11"
 serde = "1.0"
 serde_json = "1.0"
 serde_test = "1.0"
+serde_with = "3.6"
 serial_test = "3.0"
 sha-1 = "0.10"
 sha2 = "0.10"
