--- a/p2p/types/Cargo.toml
+++ b/p2p/types/Cargo.toml
@@ -10,8 +10,16 @@ rust-version.workspace = true
 common = { path = "../../common" }
 serialization = { path = "../../serialization" }
 
+addr.workspace = true
+async-trait.workspace = true
+itertools.workspace = true
 parity-scale-codec.workspace = true
 serde.workspace = true
+serde_with.workspace = true
+thiserror.workspace = true
+tokio.workspace = true
 
 [dev-dependencies]
 serde_test.workspace = true
+test-utils = {path = '../../test-utils'}
+tokio = { workspace = true, default-features = false, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time", "test-util"] }
